Fix unclickable date on IOS

--- a/app/styles/templates/_schedule_details.scss
+++ b/app/styles/templates/_schedule_details.scss
@@ -30,8 +30,8 @@
 
       .slot-list {
         font-size: 0.8rem;
-        padding-top: 1rem;
-        padding-bottom: 1rem;
+        height: 3.25rem;
+        line-height: 3.25rem;
         border-bottom: 1px solid $smokey-grey;
         .date {
           text-align: right;
